--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,4 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".screens.start.StartActivity">
 
+    <ImageView
+        android:id="@+id/start_top_corner"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:translationX="-120dp"
+        android:background="@drawable/ic_gear"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/start_icon_shadow"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/bg_start_icon_shadow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/start_icon"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:background="@drawable/bg_start_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/start_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/primary_text_color"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_icon_shadow" />
+
+    <ImageView
+        android:id="@+id/start_bottom_corner"
+        android:layout_width="450dp"
+        android:layout_height="450dp"
+        android:background="@drawable/ic_gear"
+        android:translationX="160dp"
+        android:translationY="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
+
 </android.support.constraint.ConstraintLayout>
