--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="primary">#191A29</color>
+    <color name="primary_dark">#101019</color>
+    <color name="primary_light">#C5CAE9</color>
+    <color name="accent">#66688F</color>
+
+    <color name="primary_text_color">#FFFFFF</color>
+    <color name="secondary_text_color">#9A9CB5</color>
+    <color name="secondary_text_color_dark">#66688F</color>
+
+    <color name="gradient_shadow_start">#02323348</color>
+    <color name="gradient_shadow_end">#3366688F</color>
+
+    <color name="green">#3DE77B</color>
 </resources>
