--- a/app/src/main/res/layout/activity_no_access.xml
+++ b/app/src/main/res/layout/activity_no_access.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.access.NoAccessActivity">
 
+    <include layout="@layout/toolbar" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/access"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You have no access to project files"
-        android:textSize="20sp"
+        android:layout_below="@id/toolbar_shadow"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:text="@string/no_access"
+        android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/access"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:text="@string/send_access_request"
+        android:textAlignment="center"
+        android:textColor="@color/secondary_text_color"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btn_send"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/request"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:enabled="true"
+        android:text="@string/send"
+        android:textColor="@color/button_text_color" />
+
+</RelativeLayout>
