--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,12 @@
             app:tabIndicatorColor="@color/indicator"
             app:tabSelectedTextColor="@color/active"
             app:tabTextColor="@color/inactive" />
+
+        <View
+            android:id="@+id/toolbar_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/toolbar_dropshadow" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
