--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,8 @@
             app:tabSelectedTextColor="@color/active"
             app:tabTextColor="@color/inactive" />
 
-        <View
-            android:id="@+id/toolbar_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@drawable/toolbar_dropshadow" />
+        <include layout="@layout/toolbar_shadow" />
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
