--- a/app/src/main/res/layout/photo.xml
+++ b/app/src/main/res/layout/photo.xml
@@ -14,6 +14,7 @@
             android:id="@+id/photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             tools:ignore="ContentDescription" />
 
         <TextView
